apps/zot/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: zot
  labels:
    cloudlab.kerbaras.com/gateway-access: "true"
